--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}" class="antialiased">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
-  <link rel="stylesheet" href="{% link /assets/css/app.css %}">
-</head>
-<body class="bg-gray-100 text-gray-900 font-sans tracking-wider leading-normal">
-  {%- include header.html -%}
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  <main aria-label="Content">
-    {{ content }}
-  </main>
+  {%- include head.html -%}
 
-  {%- include footer.html -%}
+  <body>
 
-  <script src="{% link /assets/js/app.js %}"></script>
-</body>
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
+  </body>
+
 </html>
