--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 ---
-<article>
-  <header>
-    <h1>{{ page.title | escape }}</h1>
+<article class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
-  <div class="prose prose-sm lg:prose-lg xl:prose-xl">
+  <div class="post-content">
     {{ content }}
   </div>
+
 </article>
